[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "road_to_waffle_house"
version = "0.1.5"
description = "Find your way to the nearest Waffle House using Google Maps"
authors = [{ name="Bear, Justin, Ryan, Joe", email="jbrigg17@emich.edu" }]
readme = "README.md"
license = { file="LICENSE" }
dependencies = [
    "requests",
    "pygame",
]
requires-python = ">=3.7"

[project.scripts]
road-to-waffle-house = "road_to_waffle_house.distance_matrix:main"

[project.urls]
Homepage = "https://github.com/yourusername/road_to_waffle_house"

[tool.hatch.build.targets.wheel]
packages = ["road_to_waffle_house"]
sources = ["src"]
